--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,6 @@
     <title>Prueba modulo6</title>
 </head>
 <body>
-    <h1 style="color: rgb(255, 0, 247);">"Vamos Sandra Tu puedes!!"</h1>
-    
+  <form action=""></form>
 </body>
 </html>
